kubernetes/flaresolver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: flaresolverr
  name: flaresolverr
