kubernetes/flaresolver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: flaresolverr
  labels:
    app: flaresolverr
spec:
  type: ClusterIP
  selector:
    app: flaresolverr
  ports:
    - name: http
      protocol: TCP
      port: 8191
      targetPort: 8191
